# IconExtractor

./: IconExtractor.cabal  LICENSE  Procfile  README.md  index.html
src/: App.hs  Extract.hs  Icon.hs
static/css/: style.css
static/js/: app.js
test/: Spec.hs
