name:                IconExtractor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/deepredsky/IconExtractor#readme
license:             BSD3
license-file:        LICENSE
author:              Rajesh Sharma
maintainer:          rajesh@surf.net.np
copyright:           2018 Rajesh Sharma
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
                     , Extract
                     , Icon
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , scotty
                     , wai
                     , html-conduit
                     , http-conduit
                     , xml-conduit
                     , text
                     , wai-extra
                     , wai-middleware-static
  default-language:    Haskell2010

executable IconExtractor-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , IconExtractor
  default-language:    Haskell2010

test-suite IconExtractor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , IconExtractor
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , aeson
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/deepredsky/IconExtractor
